# tools

crates/rome_analyze/: Cargo.toml
crates/rome_analyze/examples/: analyze.rs
crates/rome_analyze/src/: analyzers.rs  lib.rs  salsa_db.rs
crates/rome_analyze/src/analyzers/: all_caps.rs  double_eq.rs  swap_cond.rs
crates/rome_lsp/: Cargo.toml
crates/rome_lsp/src/: capabilities.rs  lib.rs  main.rs  server.rs  url_interner.rs  utils.rs
crates/rome_rowan/src/: api.rs  cursor.rs
crates/rslint_parser/src/: ast.rs  lib.rs  make.rs
crates/rslint_parser/src/syntax/: class.rs  expr.rs  function.rs  js_parse_error.rs  program.rs  stmt.rs
crates/rslint_parser/test_data/inline/err/: class_extends_err.js  class_extends_err.rast
editors/vscode/: README.md  package.json
editors/vscode/src/: extension.ts
