[package]
name = "rome_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.3"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
crossbeam-channel = "0.5"
lsp-server = "0.5.2"
lsp-types = "0.83.1"
anyhow = "1.0.35"
indexmap = "1.6.2"
rome_formatter = { path = "../rome_formatter" }
rome_analyze = { path = "../rome_analyze" }
rslint_parser = { path = "../rslint_parser" } 